# MPointers2_8

./: .gitignore  CMakeLists.txt
include/: memory_manager.h  mock_memory_manager.h  mpointer.h
proto/: memory.proto
src/: client.cpp  memory_manager.cpp  memory_manager_server.cpp  memory_manager_server.h  mock_memory_manager.cpp
src/MemoryManager/: memory_manager.cpp  memory_manager.h
test/: test_mpointers.cpp
